--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=fashion-ecommerce-core
+
+spring.datasource.url=jdbc:mysql://localhost:3306/fashion_ecommerce
+spring.datasource.username=root
+spring.datasource.password=Dinhmanh98$$$
