--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=fashion-ecommerce-core
 spring.datasource.url=jdbc:mysql://localhost:3306/fashion_ecommerce
 spring.datasource.username=root
 spring.datasource.password=Dinhmanh98$$$
+
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
