--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.application.name=fashion-ecommerce-core
 spring.datasource.url=jdbc:mysql://localhost:3306/fashion_ecommerce
 spring.datasource.username=root
 spring.datasource.password=Dinhmanh98$$$
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
